css/cake.css
.cake {
  background-color: var(--stand-out-tone);
  color: var(--font-color2);
  padding: 2.5%;
  margin: 2.5%;
}

.cake img {
  max-width: 100%;
  max-height: 100%;
  padding: 2.5%;
}

.cake h1 {
  padding: 2.5%;
  margin: 2.5%;
  text-transform: capitalize;
}

.cake p {
  padding: 2.5%;
  margin: 2.5%;
  font-size: var(--quote-md);
}

.cake a {
  padding: 2.5%;
  margin: 2.5%;
  width: 75%;
}

.cake a:active {
  background-color: lime !important;
}


#products {
  display: grid;
}

@media (min-width: 576px) {
  #products {
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(8, 1fr);
    grid-template-areas:
    "c1"
    "c2"
    "c3"
    "c4"
    "c5"
    "c6"
    "c7"
    "c8";
  }
}

@media (min-width: 768px) {
  #products {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);
    grid-template-areas:
    "c1 c2"
    "c3 c4"
    "c5 c6"
    "c7 c8";
  }
}

@media (min-width: 1200px) {
  #products {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);

    grid-template-areas:
      "c1 c2 c3 c4"
      "c5 c6 c7 c8";
  }
}

